fix some color contrast in text on the dashboard

--- a/src/views/DashboardV2/DashboardComponents/Sidebar/Sidebar.scss
+++ b/src/views/DashboardV2/DashboardComponents/Sidebar/Sidebar.scss
@@ -188,6 +188,7 @@
 			}
 		}
 	}
+
 	.info-container {
 		p,
 		span {
@@ -209,14 +210,14 @@
 			}
 		}
 	}
-	.dashboard-sidebar-footer {
+	.dashboard-sidebar {
 		h5 {
 			color: $snow-white;
 		}
-		.number {
-			background-color: $snow-white;
-			color: $black-void;
-		}
+		// .number {
+		// 	background-color: $snow-white;
+		// 	color: $black-void;
+		// }
 		.a-container {
 			.count {
 				color: $black-void;
